# LinkAll

./: .gitignore  设计方案.txt
.github/workflows/: android.yml  ci.yml  desktop.yml  server.yml  web.yml
.trae/specs/build-linkall-fullstack/: checklist.md  phase6-plan.md  spec.md  tasks.md
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
desktop/: package.json
desktop/frontend/: app.js  index.html  styles.css
desktop/frontend/control/: canvas.js  connect-form.js  settings-drawer.js  virtual-keyboard.js  virtual-mouse.js  wheel-slider.js
desktop/frontend/i18n/: en-US.json  zh-CN.json
desktop/frontend/lib/: api.js  i18n.js  toast.js  webrtc.js
desktop/frontend/views/: control.js  controlled.js  settings.js  setup.js
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/migrations/: 001_init.sql
desktop/src-tauri/src/: auth.rs  autostart.rs  commands.rs  config.rs  daemon.rs  device.rs  lib.rs  main.rs  tray.rs
desktop/src-tauri/src/capture/: linux.rs  mod.rs  windows.rs
desktop/src-tauri/src/control/: datachannel.rs  mod.rs  peer.rs  signaling.rs  state.rs
desktop/src-tauri/src/encoder/: h264.rs  mod.rs
desktop/src-tauri/src/input/: linux.rs  mod.rs  windows.rs
desktop/src-tauri/src/privacy/: linux.rs  mod.rs  windows.rs
desktop/src-tauri/src/webrtc/: control.rs  mod.rs  peer.rs  signaling.rs
server/: go.mod
server/cmd/: main.go
server/internal/auth/: hash.go  invite.go  jwt.go  password.go
server/internal/config/: config.go  secret.go
server/internal/db/: migrations.go  sqlite.go
server/internal/handlers/: announce.go  (+12 more)
server/migrations/: 001_users.sql  002_devices.sql  003_announcements.sql  004_ota_releases.sql  005_file_transfers.sql  006_invite_upgrade.sql  embed.go
shared/: errors.json  messages.json  protocol.json
web/: index.html  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css  main.ts  vite-env.d.ts
(+136 files in other folders)
