[package]
name = "linkall-desktop"
version = "0.1.0"
description = "LinkALL 桌面被控端 - Tauri 2 + Rust"
authors = ["LinkALL"]
edition = "2021"
rust-version = "1.85"

[lib]
name = "linkall_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2 框架（含托盘、窗口管理）
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2"

# 序列化与异步运行时
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"

# 屏幕截屏（DXGI / X11 / Wayland）
scrap = "0.5"

# 键鼠注入（跨平台后备实现）
enigo = "0.2"

# WebRTC（webrtc-rs）：RTCPeerConnection / 媒体轨道 / 数据通道
webrtc = "0.12"

# WebSocket 信令客户端（rustls 静态 TLS，无 OpenSSL 依赖）
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP 客户端（登录/注册/OTA 检查，rustls 静态 TLS）
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# 本地 SQLite 凭据存储（bundled 免系统依赖）
rusqlite = { version = "0.32", features = ["bundled"] }

# H.264 软件编码（Cisco openh264）
openh264 = "0.7"

# 工具与错误处理
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
base64 = "0.22"
dirs = "5"
sha2 = "0.10"
rand = "0.8"

# === 平台特定依赖 ===

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Power",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[profile.release]
# 极致轻量化：去除符号、优化体积
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
